<resources>
    <string name="app_name">InContro</string>
    <string name="password_hint">• • • • • • •</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_email">Email</string>
    <string name="someone_example_com">someone@example.com</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="click_here_to_login">Click here to login</string>
</resources>