<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activites.SignUpActivity">
    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_200"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/colorTextIcons"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:text="Sign Up"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_16ssp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSigninHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_need_a_few_details_to_get_your_account_ready"
                android:textColor="@color/colorPrimarytext"
                android:includeFontPadding="false"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutHeader"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/txtSigninHeading">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/first_name"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/colorPrimarytext"
                        android:textSize="@dimen/_11ssp"
                        />
                    <EditText
                        android:id="@+id/inputFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:hint="John"
                        android:importantForAutofill="no"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimarytext"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/last_name"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/colorPrimarytext"
                        android:textSize="@dimen/_11ssp"
                        />
                    <EditText
                        android:id="@+id/inputLastName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:hint="Wick"
                        android:importantForAutofill="no"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimarytext"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/sign_email"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/colorPrimarytext"
                        android:textSize="@dimen/_11ssp"
                        />
                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:hint="@string/someone_example_com"
                        android:importantForAutofill="no"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimarytext"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="Password"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/colorPrimarytext"
                        android:textSize="@dimen/_11ssp"
                        />
                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:hint="@string/password_hint"
                        android:importantForAutofill="no"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimarytext"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="Confirm Password"
                        android:fontFamily="@font/ubuntu_regular"
                        android:textColor="@color/colorPrimarytext"
                        android:textSize="@dimen/_11ssp"
                        />
                    <EditText
                        android:id="@+id/inputConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:hint="@string/password_hint"
                        android:importantForAutofill="no"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimarytext"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/btn_sign_up"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/cardSignIn"/>

                <ProgressBar
                    android:id="@+id/signUpProgress"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>
            


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Already have an account?"
                android:gravity="center"
                android:textColor="@color/colorPrimarytext"
                android:includeFontPadding="false"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/ubuntu_regular"/>
            <TextView
                android:id="@+id/txtSignInLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/click_here_to_login"
                android:gravity="center"
                android:textColor="@color/purple_700"
                android:includeFontPadding="false"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toBottomOf="@id/txtNoAccount"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>