<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activites.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/purple_200"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/app_name"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_16ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="Highest Quality Video Calling App"
                android:textColor="@color/colorTextIcons"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtSigninHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in to your account"
            android:textColor="@color/colorPrimarytext"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/txtSigninHeading">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="Email"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="@dimen/_11ssp"
                    />
                <EditText
                    android:id="@+id/inputLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:hint="@string/someone_example_com"
                    android:importantForAutofill="no"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimarytext"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="Password"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textColor="@color/colorPrimarytext"
                    android:textSize="@dimen/_11ssp"
                    />
                <EditText
                    android:id="@+id/inputLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:hint="@string/password_hint"
                    android:importantForAutofill="no"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimarytext"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/btn_sign_in"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@id/cardSignIn"/>


        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            app:layout_constraintTop_toTopOf="@id/buttonSignIn"/>


        <TextView
            android:id="@+id/txtNoAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/don_t_have_an_account"
            android:gravity="center"
            android:textColor="@color/colorPrimarytext"
            android:includeFontPadding="false"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_regular"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"/>
        <TextView
            android:id="@+id/txtSignUpLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="Click here to signup"
            android:gravity="center"
            android:textColor="@color/purple_700"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_bold"
            app:layout_constraintTop_toBottomOf="@id/txtNoAccount"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>